--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "convex": "^1.26.2",
-    "expo": "~53.0.22",
+    "date-fns": "^4.1.0",
+    "expo": "^54.0.8",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-secure-store": "^14.2.3",
@@ -40,9 +43,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "svix": "^1.76.1",
-    "expo-image-picker": "~16.1.4",
-    "expo-file-system": "~18.1.11"
+    "svix": "^1.76.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
